We do density=True in histrogram as we want to compare it to mean and std later. so there are two graphs in one figure.  Histrogram and the normal curve

--- a/DS-Python-EngyFouda/ch-3/Histrogram.ipynb
+++ b/DS-Python-EngyFouda/ch-3/Histrogram.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "92b9a51d",
    "metadata": {},
    "outputs": [
@@ -136,16 +136,16 @@
     "df.describe()\n",
     "\n",
     "#data prep\n",
-    "x   =   np.arange(0,140000, 1) # create a line from 0 to 140000 with step 1 for smooth curve plotting\n",
     "ar  =   df['Annual_Rt'] # Create a series for masking and filter\n",
     "mask    =   ar  <   140000  # boolean masking, mask is an array having true or false based on the condition provided\n",
     "df1 =   ar[mask]    # Create a new series appling the filter created in above line\n",
     "\n",
     "#plot histrogram\n",
-    "plt.figure(figsize=(15,10)) #bin size tell number of bar lines, and density is to take logerythmic value, alpha and color is just visual aspect\n",
+    "plt.figure(figsize=(15,10)) #bin size tell number of bar lines, and density is to take logerythmic value and help later to compare with mean and std, alpha and color is just visual aspect\n",
     "plt.hist(df1, bins=10,density=True,alpha=0.1, color='r')\n",
     "\n",
     "#plot normal distribution with mean(avarage) and standard deviation (distribution)\n",
+    "x   =   np.arange(0,140000, 1) # create a line from 0 to 140000 with step 1 for smooth curve plotting\n",
     "mu, std = norm.fit(df1) \n",
     "plt.plot(x, norm.pdf(x, mu, std), 'r-', label='Normal Distribution')\n",
     "\n",
