added comments to explain code

--- a/DS-Python-EngyFouda/ch-3/barchart.ipynb
+++ b/DS-Python-EngyFouda/ch-3/barchart.ipynb
@@ -52,6 +52,13 @@
     "plt.title('Number of Crimes in Different Boroughs')\n",
     "\n",
     "plt.show()\n",
+    "\n",
+    "# we have created dataframe by selecting only 3 columns,\n",
+    "# then we created data series by using .value_counts() \n",
+    "# it gives counts for each borough name, \n",
+    "# then we created 2 column table from serias borough and crimes, \n",
+    "# then we ploted the bar chart.  in barchart on y-axis,\n",
+    "#  we used sort_value(ascending=True) to sort the graph\n",
     "\n"
    ]
   }
