--- a/DS-Python-EngyFouda/ch-3/barchart.ipynb
+++ b/DS-Python-EngyFouda/ch-3/barchart.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "a12fe1f1",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
     "plt.ylabel('Winning Percentages (%)')\n",
     "plt.title('Winning Percentages of Presidential Candidates')\n",
     "\n",
-    "# plt.show()"
+    "plt.show()"
    ]
   }
  ],
