--- a/DS-Python-EngyFouda/ch-4/CorrelationAnalysis.ipynb
+++ b/DS-Python-EngyFouda/ch-4/CorrelationAnalysis.ipynb
@@ -89,6 +89,47 @@
     "plt.title('Correlation between Lenght and Power')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "551f3bfe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5 entries, 0 to 4\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   year          5 non-null      int64  \n",
+      " 1   voterturnout  5 non-null      float64\n",
+      " 2   gdp           5 non-null      float64\n",
+      "dtypes: float64(2), int64(1)\n",
+      "memory usage: 252.0 bytes\n",
+      "Voters turnout with respect to GDP: 0.0499\n"
+     ]
+    }
+   ],
+   "source": [
+    "# correlation between GDP and Maine voter turnout\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "#import data from xls\n",
+    "correlation = pd.read_excel('./correlation.xlsx')\n",
+    "\n",
+    "#process data\n",
+    "correlation.info()\n",
+    "voterturnout_corr = correlation['voterturnout'].corr(correlation['gdp'])\n",
+    "print(f'Voters turnout with respect to GDP: {voterturnout_corr:.4f}')\n",
+    "#Voters turnout with respect to GDP: 0.0499\n",
+    "\n",
+    "#since the correlation coefficient is less than 0.05 there is no relation between gdp and voters turn out.\n"
+   ]
   }
  ],
  "metadata": {
