--- a/ResearchExplore/Concepts/sqlite.ipynb
+++ b/ResearchExplore/Concepts/sqlite.ipynb
@@ -228,7 +228,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Records:  <sqlite3.Cursor object at 0x0000011CF11ABA40>\n",
+      "Records:  <sqlite3.Cursor object at 0x00000285D9A6E6C0>\n",
       "Row data [1]: ('Zophie', '2021-01-24', 'black', 5.6)\n",
       "Row data [2]: ('Miguel', '2016-12-24', 'siamese', 6.2)\n",
       "Row data [3]: ('Jacob', '2022-02-20', 'orange and white', 5.5)\n",
@@ -543,6 +543,302 @@
     "\n",
     "# swcats_db.close()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6033f484",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Update data\n",
+    "swcats_db.execute('UPDATE cats SET fur = \"gray tabby\" WHERE rowid = 1')\n",
+    "swcats_db.execute('SELECT * FROM cats WHERE rowid = 1').fetchall()\n",
+    "swcats_db.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d79ded5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Miguel', '2016-12-24', 'siamese', 6.2),\n",
+      " ('Jacob', '2022-02-20', 'orange and white', 5.5),\n",
+      " ('Gumdrop', '2020-08-23', 'white', 6.4),\n",
+      " ('Hector', '2022-03-15', 'orange and white', 7.5),\n",
+      " ('Night', '2019-03-16', 'tuxedo', 6.5)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Delete from table\n",
+    "import sqlite3 as sq\n",
+    "import pprint\n",
+    "# swcats_db.close()\n",
+    "swcats_db = sq.connect('sweigartcats.db',isolation_level=None)\n",
+    "swcats_db.execute('DELETE FROM cats WHERE rowid = 1')\n",
+    "pprint.pprint(swcats_db.execute('SELECT * FROM cats LIMIT 5').fetchall())\n",
+    "swcats_db.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a376d759",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Transaction\n",
+    "swcats_db = sq.connect('sweigartcats.db',isolation_level=None)\n",
+    "swcats_db.execute('BEGIN')\n",
+    "swcats_db.execute('INSERT INTO cats VALUES (\"Socks\", \"2022-04-04\", \"white\", 4.2)')\n",
+    "swcats_db.rollback()\n",
+    "# swcats_db.commit()\n",
+    "pprint.pprint(swcats_db.execute('SELECT * FROM cats WHERE name=\"Socks\"').fetchall())\n",
+    "swcats_db.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "328dbdeb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Back up data base\n",
+    "bkp_swcats_db = sq.connect('bkp_swcats.db',isolation_level=None)\n",
+    "swcats_db = sq.connect('sweigartcats.db',isolation_level=None)\n",
+    "swcats_db.backup(bkp_swcats_db)\n",
+    "swcats_db.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d9721a43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Miguel', '2016-12-24', 'siamese', 6.2),\n",
+      " ('Jacob', '2022-02-20', 'orange and white', 5.5),\n",
+      " ('Gumdrop', '2020-08-23', 'white', 6.4),\n",
+      " ('Hector', '2022-03-15', 'orange and white', 7.5),\n",
+      " ('Night', '2019-03-16', 'tuxedo', 6.5)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "pprint.pprint(bkp_swcats_db.execute('SELECT * FROM cats LIMIT 5').fetchall())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03f511c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('felines',)]\n",
+      "(2, 'description', 'TEXT', 0, None, 0)\n",
+      "[('Miguel', '2016-12-24', 'siamese', 6.2, 1),\n",
+      " ('Jacob', '2022-02-20', 'orange and white', 5.5, 1),\n",
+      " ('Gumdrop', '2020-08-23', 'white', 6.4, 1)]\n",
+      "[(0, 'name', 'TEXT', 1, None, 0),\n",
+      " (1, 'birthdate', 'TEXT', 0, None, 0),\n",
+      " (2, 'description', 'TEXT', 0, None, 0),\n",
+      " (3, 'weight_kg', 'REAL', 0, None, 0)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Alter Rename table\n",
+    "swcats_db = sq.connect('sweigartcats.db',isolation_level=None)\n",
+    "# swcats_db.execute('ALTER TABLE cats RENAME TO felines')\n",
+    "pprint.pprint(swcats_db.execute('SELECT name FROM sqlite_schema WHERE type=\"table\"').fetchall())\n",
+    "\n",
+    "# rename column\n",
+    "# swcats_db.execute('ALTER TABLE felines RENAME COLUMN fur TO description')\n",
+    "pprint.pprint(swcats_db.execute('PRAGMA TABLE_INFO(felines)').fetchall()[2]) #list 3rd column\n",
+    "# swcats_db.execute('ALTER TABLE felines ADD COLUMN is_loved INTEGER DEFAULT 1')\n",
+    "pprint.pprint(swcats_db.execute('SELECT * FROM felines LIMIT 3').fetchall())\n",
+    "# swcats_db.execute('ALTER TABLE felines DROP COLUMN is_loved')\n",
+    "pprint.pprint(swcats_db.execute('PRAGMA TABLE_INFO(felines)').fetchall())\n",
+    "\n",
+    "swcats_db.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "38286472",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('cats',)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Rename back to cats\n",
+    "swcats_db = sq.connect('sweigartcats.db',isolation_level=None)\n",
+    "# swcats_db.execute('ALTER TABLE felines RENAME TO cats')\n",
+    "pprint.pprint(swcats_db.execute('SELECT name FROM sqlite_schema WHERE type=\"table\"').fetchall())\n",
+    "swcats_db.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "ba1f0ac7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('cats',), ('vaccinations',)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# JOIN tables and Foreign key\n",
+    "swcats_db = sq.connect('sweigartcats.db',isolation_level=None)\n",
+    "swcats_db.execute('PRAGMA foreign_key=ON')\n",
+    "swcats_db.execute('CREATE TABLE IF NOT EXISTS vaccinations (vaccine TEXT,date_administered TEXT, administered_by TEXT, cat_id INTEGER,FOREIGN KEY(cat_id) REFERENCES cats(rowid))')\n",
+    "pprint.pprint(swcats_db.execute('SELECT name FROM sqlite_schema WHERE type=\"table\"').fetchall())\n",
+    "\n",
+    "swcats_db.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ec9580a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#insert few records in vaccinations table\n",
+    "swcats_db = sq.connect('sweigartcats.db',isolation_level=None)\n",
+    "swcats_db.execute('INSERT INTO vaccinations VALUES (\"rabies\", \"2023-06-06\", \"Dr. Echo\", 1)')\n",
+    "swcats_db.execute('INSERT INTO vaccinations VALUES (\"FeLV\", \"2023-06-06\", \"Dr. Echo\", 1)')\n",
+    "swcats_db.execute('INSERT INTO vaccinations VALUES (\"rabies\", \"2023-07-11\", \"Dr. Echo\", 23)')\n",
+    "swcats_db.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7d343f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# quary cats got vaccination records\n",
+    "swcats_db = sq.connect('sweigartcats.db',isolation_level=None)\n",
+    "\n",
+    "# pprint.pprint(swcats_db.execute('SELECT * FROM CATS INNER JOIN vaccinations ON cats.rowid = vaccinations.cat_id').fetchall())\n",
+    "swcats_db.execute('SELECT * FROM cats INNER JOIN vaccinations ON cats.rowid = vaccinations.cat_id').fetchall()\n",
+    "swcats_db.close() # toggle this line to comment to see the output\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5dbde545",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "foreign key mismatch - \"vaccinations\" referencing \"cats\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mOperationalError\u001b[39m                          Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[45]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m swcats_db.execute(\u001b[33m'\u001b[39m\u001b[33mPRAGMA foreign_key=OFF\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[33m'\u001b[39m\u001b[33msw_db_dump.txt\u001b[39m\u001b[33m'\u001b[39m,\u001b[33m'\u001b[39m\u001b[33mw\u001b[39m\u001b[33m'\u001b[39m,encoding=\u001b[33m'\u001b[39m\u001b[33mutf-8\u001b[39m\u001b[33m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m fileObj:\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mrow\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mswcats_db\u001b[49m\u001b[43m.\u001b[49m\u001b[43miterdump\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[43m        \u001b[49m\u001b[43mfileObj\u001b[49m\u001b[43m.\u001b[49m\u001b[43mwrite\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      8\u001b[39m swcats_db.close() \u001b[38;5;66;03m# toggle this line to comment to see the output\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\shaik\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\sqlite3\\dump.py:31\u001b[39m, in \u001b[36m_iterdump\u001b[39m\u001b[34m(connection, filter)\u001b[39m\n\u001b[32m     29\u001b[39m cu.row_factory = \u001b[38;5;28;01mNone\u001b[39;00m  \u001b[38;5;66;03m# Make sure we get predictable results.\u001b[39;00m\n\u001b[32m     30\u001b[39m \u001b[38;5;66;03m# Disable foreign key constraints, if there is any foreign key violation.\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m31\u001b[39m violations = \u001b[43mcu\u001b[49m\u001b[43m.\u001b[49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mPRAGMA foreign_key_check\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m.fetchall()\n\u001b[32m     32\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m violations:\n\u001b[32m     33\u001b[39m     \u001b[38;5;28;01myield\u001b[39;00m(\u001b[33m'\u001b[39m\u001b[33mPRAGMA foreign_keys=OFF;\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mOperationalError\u001b[39m: foreign key mismatch - \"vaccinations\" referencing \"cats\""
+     ]
+    }
+   ],
+   "source": [
+    "# create a copy of database\n",
+    "swcats_db.close() # toggle this line to comment to see the output\n",
+    "swcats_db = sq.connect('sweigartcats.db',isolation_level=None)\n",
+    "swcats_db.execute('PRAGMA foreign_key=ON')\n",
+    "\n",
+    "with open('sw_db_dump.txt','w',encoding='utf-8') as fileObj:\n",
+    "    for row in swcats_db.iterdump():\n",
+    "        fileObj.write(row + '\\n')\n",
+    "swcats_db.close() # toggle this line to comment to see the output\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f63d3a7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "table cats:\n",
+      "Column 0 → name: name, type: TEXT, notnull: True\n",
+      "Column 1 → name: birthdate, type: TEXT, notnull: False\n",
+      "Column 2 → name: description, type: TEXT, notnull: False\n",
+      "Column 3 → name: weight_kg, type: REAL, notnull: False\n",
+      "table vaccinations\n",
+      "Column 0 → name: vaccine, type: TEXT, notnull: False\n",
+      "Column 1 → name: date_administered, type: TEXT, notnull: False\n",
+      "Column 2 → name: administered_by, type: TEXT, notnull: False\n",
+      "Column 3 → name: cat_id, type: INTEGER, notnull: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# since the we used rowid as foreign key for the vaccination table we need to run a little fix\n",
+    "# rename the cats tabel to old_cats\n",
+    "# create new cats table with primary key column\n",
+    "# copy data from old_cats to new cat\n",
+    "# rename the vaccinations table to old_vaccinations table\n",
+    "# create a new vaccinations table with proper foreign key\n",
+    "# copy data from old_vaccination table\n",
+    "# varify data in both the tables\n",
+    "# drop the data\n",
+    "import sqlite3\n",
+    "swcats_db.close() # toggle this line to comment to see the output\n",
+    "swcats_db = sqlite3.connect('sweigartcats.db', isolation_level=None)\n",
+    "headers = swcats_db.execute(\"PRAGMA table_info(cats)\").fetchall()\n",
+    "print('table cats:')\n",
+    "for col in headers:\n",
+    "    print(f\"Column {col[0]} → name: {col[1]}, type: {col[2]}, notnull: {bool(col[3])}\")\n",
+    "print('table vaccinations')\n",
+    "headers = swcats_db.execute(\"PRAGMA table_info(vaccinations)\").fetchall()\n",
+    "for col in headers:\n",
+    "    print(f\"Column {col[0]} → name: {col[1]}, type: {col[2]}, notnull: {bool(col[3])}\")\n",
+    "swcats_db.close() # toggle this line to comment to see the output"
    ]
   }
  ],
