--- a/ResearchExplore/Concepts/timeseriestrend/timeseriestrend.ipynb
+++ b/ResearchExplore/Concepts/timeseriestrend/timeseriestrend.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "df36fb88",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
        "2  1.389030e+09  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
     "# Time range: 2010 to 2020\n",
     "# Country: India, Canada, Naigeria\n",
     "\n",
-    "# series = 'SP.POP.TOTL'\n",
+    "series = 'SP.POP.TOTL'\n",
     "countries=['IND','CAN','NGA']\n",
     "start = int(input('Enter start year:'))\n",
     "end = int(input('Enter end year: '))\n",
@@ -162,7 +162,7 @@
     "#     labels=True\n",
     "# ).reset_index()\n",
     "\n",
-    "df = wb.data.DataFrame('SP.POP.TOTL',economy=countries,time=time,labels=True,).reset_index()\n",
+    "df = wb.data.DataFrame(series=series,economy=countries,time=time,labels=True,).reset_index()\n",
     "\n",
     "df.head()"
    ]
