Population and Birthrate data fetched, conditioned and ready to upload to sqlite database for futher calculations.

--- a/ResearchExplore/Concepts/dsdt/dsdt.ipynb
+++ b/ResearchExplore/Concepts/dsdt/dsdt.ipynb
@@ -139,8 +139,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ddded163",
+   "metadata": {},
+   "source": [
+    "There is a data of INX having NaN for birthrate, same is replaced with mean() of the entire column in order to keep the birthrate newtral."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "5a2f842a",
    "metadata": {},
    "outputs": [
@@ -148,18 +156,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  economy                country  year  birthrate\n",
-      "0     ZWE               Zimbabwe  2019     31.121\n",
-      "1     ZMB                 Zambia  2019     35.006\n",
-      "2     YEM            Yemen, Rep.  2019     35.947\n",
-      "3     PSE     West Bank and Gaza  2019     29.708\n",
-      "4     VIR  Virgin Islands (U.S.)  2019     12.300\n",
+      "  code                country  year  birthrate\n",
+      "0  ZWE               Zimbabwe  2019     31.121\n",
+      "1  ZMB                 Zambia  2019     35.006\n",
+      "2  YEM            Yemen, Rep.  2019     35.947\n",
+      "3  PSE     West Bank and Gaza  2019     29.708\n",
+      "4  VIR  Virgin Islands (U.S.)  2019     12.300\n",
       "1330\n",
-      "economy      0\n",
-      "country      0\n",
-      "year         0\n",
-      "birthrate    5\n",
-      "dtype: int64\n"
+      "       index  0\n",
+      "0       code  0\n",
+      "1    country  0\n",
+      "2       year  0\n",
+      "3  birthrate  0\n",
+      "Empty DataFrame\n",
+      "Columns: [code, country, year, birthrate]\n",
+      "Index: []\n"
      ]
     }
    ],
@@ -170,12 +181,23 @@
     "    var_name='year',\n",
     "    value_name='birthrate'\n",
     ")\n",
-    "birth_rate_country_wise.columns=['economy','country','year','birthrate']\n",
+    "birth_rate_country_wise.columns=['code','country','year','birthrate']\n",
     "birth_rate_country_wise['year']=birth_rate_country_wise['year'].str.replace('YR','').astype(int)\n",
     "print(birth_rate_country_wise.head())\n",
     "print(len(birth_rate_country_wise))\n",
-    "na_count = birth_rate_country_wise.isna().sum()\n",
-    "print(na_count)"
+    "na_count = birth_rate_country_wise.isna().sum().reset_index()\n",
+    "print(na_count)\n",
+    "print(birth_rate_country_wise[birth_rate_country_wise.isna().any(axis=1)])\n",
+    "if(birth_rate_country_wise[birth_rate_country_wise['code']=='INX']):\n",
+    "    birth_rate_country_wise['birthrate']= birth_rate_country_wise['birthrate'].fillna(birth_rate_country_wise['birthrate'].mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32128798",
+   "metadata": {},
+   "source": [
+    "Store data in sqlite database for futher calculations"
    ]
   }
  ],
