database, tables are created to sqlite database

--- a/ResearchExplore/Concepts/dsdt/dsdt.ipynb
+++ b/ResearchExplore/Concepts/dsdt/dsdt.ipynb
@@ -199,6 +199,35 @@
    "source": [
     "Store data in sqlite database for futher calculations"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f14f55fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('table', 'tbl_totl_pop', 'tbl_totl_pop', 2, 'CREATE TABLE \"tbl_totl_pop\" (\\n\"year\" INTEGER,\\n  \"population\" REAL\\n)'), ('table', 'tbl_br_cnt', 'tbl_br_cnt', 3, 'CREATE TABLE \"tbl_br_cnt\" (\\n\"code\" TEXT,\\n  \"country\" TEXT,\\n  \"year\" INTEGER,\\n  \"birthrate\" REAL\\n)')]\n",
+      "[(0, 'year', 'INTEGER', 0, None, 0), (1, 'population', 'REAL', 0, None, 0)]\n",
+      "[(0, 'code', 'TEXT', 0, None, 0), (1, 'country', 'TEXT', 0, None, 0), (2, 'year', 'INTEGER', 0, None, 0), (3, 'birthrate', 'REAL', 0, None, 0)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#create data base, and create tables to store population and birthrate data\n",
+    "import sqlite3\n",
+    "\n",
+    "conn = sqlite3.connect('mapleroot.db',isolation_level=None)\n",
+    "totl_pop_by_year.to_sql('tbl_totl_pop',conn,if_exists='replace',index=False)\n",
+    "birth_rate_country_wise.to_sql('tbl_br_cnt',conn,if_exists='replace',index=False)\n",
+    "print(conn.execute('SELECT * FROM sqlite_schema WHERE type=\"table\"').fetchall())\n",
+    "print(conn.execute('PRAGMA TABLE_INFO(\"tbl_totl_pop\")').fetchall())\n",
+    "print(conn.execute('PRAGMA TABLE_INFO(\"tbl_br_cnt\")').fetchall())\n",
+    "conn.close()"
+   ]
   }
  ],
  "metadata": {
