--- a/ResearchExplore/Concepts/dsdt/dsdt.ipynb
+++ b/ResearchExplore/Concepts/dsdt/dsdt.ipynb
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "f14f55fb",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('table', 'tbl_totl_pop', 'tbl_totl_pop', 2, 'CREATE TABLE \"tbl_totl_pop\" (\\n\"year\" INTEGER,\\n  \"population\" REAL\\n)'), ('table', 'tbl_br_cnt', 'tbl_br_cnt', 3, 'CREATE TABLE \"tbl_br_cnt\" (\\n\"code\" TEXT,\\n  \"country\" TEXT,\\n  \"year\" INTEGER,\\n  \"birthrate\" REAL\\n)')]\n",
+      "[('tbl_totl_county_pop',), ('tbl_totl_pop',), ('tbl_br_cnt',)]\n",
       "[(0, 'year', 'INTEGER', 0, None, 0), (1, 'population', 'REAL', 0, None, 0)]\n",
       "[(0, 'code', 'TEXT', 0, None, 0), (1, 'country', 'TEXT', 0, None, 0), (2, 'year', 'INTEGER', 0, None, 0), (3, 'birthrate', 'REAL', 0, None, 0)]\n"
      ]
@@ -221,13 +221,72 @@
     "import sqlite3\n",
     "\n",
     "conn = sqlite3.connect('mapleroot.db',isolation_level=None)\n",
+    "totl_pop_country_wise.to_sql('tbl_totl_county_pop',conn,if_exists='replace',index='False')\n",
     "totl_pop_by_year.to_sql('tbl_totl_pop',conn,if_exists='replace',index=False)\n",
     "birth_rate_country_wise.to_sql('tbl_br_cnt',conn,if_exists='replace',index=False)\n",
-    "print(conn.execute('SELECT * FROM sqlite_schema WHERE type=\"table\"').fetchall())\n",
+    "print(conn.execute('SELECT name FROM sqlite_schema WHERE type=\"table\"').fetchall())\n",
     "print(conn.execute('PRAGMA TABLE_INFO(\"tbl_totl_pop\")').fetchall())\n",
     "print(conn.execute('PRAGMA TABLE_INFO(\"tbl_br_cnt\")').fetchall())\n",
     "conn.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "deb30093",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   index code country  year  c_birthyear  c_population\n",
+      "0    181  CAN  Canada  2019          9.9    37618495.0\n",
+      "1    447  CAN  Canada  2020          9.5    38028638.0\n",
+      "2    713  CAN  Canada  2021          9.7    38239864.0\n",
+      "3    979  CAN  Canada  2022          9.0    38935934.0\n",
+      "4   1245  CAN  Canada  2023          8.8    40083484.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create a table for Canada, code, year, C_birthrate, w_birthrate, c_pop, w_pop, c_ttl_birth, w_ttl_birth, c_probability\n",
+    "conn = sqlite3.connect('mapleroot.db',isolation_level=None)\n",
+    "quary = 'SELECT * FROM tbl_br_cnt'\n",
+    "df_br_sql = pd.read_sql(quary,conn)\n",
+    "# print(df_br_sql.head())\n",
+    "\n",
+    "quary = 'SELECT * FROM tbl_totl_pop'\n",
+    "df_ttl_pop_sql = pd.read_sql(quary,conn)\n",
+    "# print(df_ttl_pop_sql)\n",
+    "\n",
+    "df_maple_roots = df_br_sql[df_br_sql['code']=='CAN'].reset_index()\n",
+    "# print(len(df_maple_roots))\n",
+    "# print(df_maple_roots.columns)\n",
+    "\n",
+    "df_maple_roots.rename(columns={\"birthrate\":\"c_birthyear\"},inplace=True)\n",
+    "\n",
+    "# column: c_pop\n",
+    "quary = 'SELECT * FROM tbl_totl_county_pop WHERE code=\"CAN\"'\n",
+    "df_can_pop = pd.read_sql(quary,conn)\n",
+    "# print(df_can_pop.head())\n",
+    "df_maple_roots = df_maple_roots.merge(\n",
+    "    df_can_pop[['code','year','population']],\n",
+    "    on=['code','year'],\n",
+    "    how='left'\n",
+    ")\n",
+    "df_maple_roots.rename(columns={'population':'c_population'},inplace=True)\n",
+    "print(df_maple_roots.head())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ec929bc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
