added w_birthrate to df_mapple_root

--- a/ResearchExplore/Concepts/dsdt/dsdt.ipynb
+++ b/ResearchExplore/Concepts/dsdt/dsdt.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 76,
    "id": "deb30093",
    "metadata": {},
    "outputs": [
@@ -277,16 +277,48 @@
     ")\n",
     "df_maple_roots.rename(columns={'population':'c_population'},inplace=True)\n",
     "print(df_maple_roots.head())\n",
+    "conn.close()\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "6ec929bc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   year  w_birthrate\n",
+      "0  2019    19.244010\n",
+      "1  2020    18.803416\n",
+      "2  2021    18.535387\n",
+      "3  2022    18.131408\n",
+      "4  2023    17.807881\n",
+      "   index code country  year  c_birthyear  c_population  w_birthrate\n",
+      "0    181  CAN  Canada  2019          9.9    37618495.0    19.244010\n",
+      "1    447  CAN  Canada  2020          9.5    38028638.0    18.803416\n",
+      "2    713  CAN  Canada  2021          9.7    38239864.0    18.535387\n",
+      "3    979  CAN  Canada  2022          9.0    38935934.0    18.131408\n",
+      "4   1245  CAN  Canada  2023          8.8    40083484.0    17.807881\n"
+     ]
+    }
+   ],
+   "source": [
+    "# add world birth rate from table tbl_br_cnt\n",
+    "conn = sqlite3.connect('mapleroot.db',isolation_level=None)\n",
+    "quary = 'SELECT year, AVG(birthrate) AS w_birthrate FROM tbl_br_cnt GROUP BY year'\n",
+    "w_birthrate_df = pd.read_sql(quary,conn)\n",
+    "print(w_birthrate_df.head())\n",
+    "df_maple_roots = df_maple_roots.merge(\n",
+    "    w_birthrate_df[['year','w_birthrate']],\n",
+    "    on=['year'],\n",
+    "    how='left'\n",
+    ")\n",
+    "print(df_maple_roots.head())"
+   ]
   }
  ],
  "metadata": {
