calculations for total birth in Canada, total birth in World and probability of persone boarn in Canada for given 5 year range done.

--- a/ResearchExplore/Concepts/dsdt/dsdt.ipynb
+++ b/ResearchExplore/Concepts/dsdt/dsdt.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 83,
    "id": "deb30093",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 84,
    "id": "6ec929bc",
    "metadata": {},
    "outputs": [
@@ -317,8 +317,139 @@
     "    on=['year'],\n",
     "    how='left'\n",
     ")\n",
+    "print(df_maple_roots.head())\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "5a0e24a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   year  w_population\n",
+      "0  2019  8.354924e+10\n",
+      "1  2020  8.448114e+10\n",
+      "2  2021  8.531826e+10\n",
+      "3  2022  8.615821e+10\n",
+      "4  2023  8.703543e+10\n",
+      "   index code country  year  c_birthyear  c_population  w_birthrate  \\\n",
+      "0    181  CAN  Canada  2019          9.9    37618495.0    19.244010   \n",
+      "1    447  CAN  Canada  2020          9.5    38028638.0    18.803416   \n",
+      "2    713  CAN  Canada  2021          9.7    38239864.0    18.535387   \n",
+      "3    979  CAN  Canada  2022          9.0    38935934.0    18.131408   \n",
+      "4   1245  CAN  Canada  2023          8.8    40083484.0    17.807881   \n",
+      "\n",
+      "   w_population  \n",
+      "0  8.354924e+10  \n",
+      "1  8.448114e+10  \n",
+      "2  8.531826e+10  \n",
+      "3  8.615821e+10  \n",
+      "4  8.703543e+10  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# add world population from table tbl_totl_pop\n",
+    "conn = sqlite3.connect('mapleroot.db',isolation_level=None)\n",
+    "quary = 'SELECT year, population as w_population FROM tbl_totl_pop'\n",
+    "totl_pop_df = pd.read_sql(quary,conn)\n",
+    "print(totl_pop_df.head())\n",
+    "df_maple_roots = df_maple_roots.merge(\n",
+    "    totl_pop_df[['year','w_population']],\n",
+    "    on=['year'],\n",
+    "    how='left'\n",
+    ")\n",
+    "print(df_maple_roots.head())\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1ed1e5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   index code country  year  c_birthrate  c_population  w_birthrate  \\\n",
+      "0    181  CAN  Canada  2019          9.9    37618495.0    19.244010   \n",
+      "1    447  CAN  Canada  2020          9.5    38028638.0    18.803416   \n",
+      "2    713  CAN  Canada  2021          9.7    38239864.0    18.535387   \n",
+      "3    979  CAN  Canada  2022          9.0    38935934.0    18.131408   \n",
+      "4   1245  CAN  Canada  2023          8.8    40083484.0    17.807881   \n",
+      "\n",
+      "   w_population  \n",
+      "0  8.354924e+10  \n",
+      "1  8.448114e+10  \n",
+      "2  8.531826e+10  \n",
+      "3  8.615821e+10  \n",
+      "4  8.703543e+10  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# correct error on column name\n",
+    "df_maple_roots.rename(columns={'c_birthyear':'c_birthrate'},inplace=True)\n",
     "print(df_maple_roots.head())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f72fd289",
+   "metadata": {},
+   "source": [
+    "### calculation\n",
+    "total Canada birth, total world birth, then calculate probability of birth in Canada compared to world"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "426ddbe8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   index code country  year  c_birthrate  c_population  w_birthrate  \\\n",
+      "0    181  CAN  Canada  2019          9.9    37618495.0    19.244010   \n",
+      "1    447  CAN  Canada  2020          9.5    38028638.0    18.803416   \n",
+      "2    713  CAN  Canada  2021          9.7    38239864.0    18.535387   \n",
+      "3    979  CAN  Canada  2022          9.0    38935934.0    18.131408   \n",
+      "4   1245  CAN  Canada  2023          8.8    40083484.0    17.807881   \n",
+      "\n",
+      "   w_population      c_birth       w_birth  c_probability  \n",
+      "0  8.354924e+10  372423.1005  1.607822e+09       0.000232  \n",
+      "1  8.448114e+10  361272.0610  1.588534e+09       0.000227  \n",
+      "2  8.531826e+10  370926.6808  1.581407e+09       0.000235  \n",
+      "3  8.615821e+10  350423.4060  1.562170e+09       0.000224  \n",
+      "4  8.703543e+10  352734.6592  1.549917e+09       0.000228  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate total birth in Canada\n",
+    "df_maple_roots['c_birth'] = (df_maple_roots['c_birthrate'] * df_maple_roots['c_population'])/1000\n",
+    "df_maple_roots['w_birth'] = (df_maple_roots['w_birthrate'] * df_maple_roots['w_population'])/1000\n",
+    "df_maple_roots['c_probability'] = (df_maple_roots['c_birth'] / df_maple_roots['w_birth'])\n",
+    "print(df_maple_roots.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a505365",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
