--- a/MapleRoots/dsdt.ipynb
+++ b/MapleRoots/dsdt.ipynb
@@ -622,12 +622,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "3d05469b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_maple_roots.to_csv('mpl_roots')\n",
+    "df_maple_roots.to_csv('mpl_roots.csv')\n",
     "conn = sqlite3.connect('mapleroot.db',isolation_level=None)\n",
     "df_maple_roots.to_sql('tbl_maple_roots',conn,if_exists='replace',index=False)\n",
     "conn.close()"
