csv data dump to create graph using streamlit

--- a/MapleRoots/dsdt.ipynb
+++ b/MapleRoots/dsdt.ipynb
@@ -632,6 +632,19 @@
     "df_maple_roots.to_sql('tbl_maple_roots',conn,if_exists='replace',index=False)\n",
     "conn.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "b3f44205",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#creating csv from data frame for streamlit app\n",
+    "totl_pop_country_wise.to_csv('total_population_country_wise.csv')\n",
+    "totl_pop_by_year.to_csv('total_population_by_year.csv')\n",
+    "birth_rate_country_wise.to_csv('birth_rate_country_wise.csv')"
+   ]
   }
  ],
  "metadata": {
