improved readability by adding markdowns and comments

--- a/MapleRoots/dsdt.ipynb
+++ b/MapleRoots/dsdt.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "source": [
     "Task Goal\n",
+    "\n",
     "Calculate the probability of being born in Canada in a particular year, using World Bank data on:\n",
     "\n",
     "- Birth Rate (SP.DYN.CBRT.IN) → births per 1,000 people\n",
@@ -21,7 +22,8 @@
    "id": "50e711fb",
    "metadata": {},
    "source": [
-    "#### Fetch Data, world population and birth rate"
+    "#### Fetch Data, world population and birth rate\n",
+    "##### Fetch World Population"
    ]
   },
   {
@@ -84,6 +86,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ccd87780",
+   "metadata": {},
+   "source": [
+    "##### Condition population data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 86,
    "id": "f9247bb6",
@@ -123,6 +133,14 @@
     "\n",
     "totl_pop_by_year = totl_pop_country_wise.groupby('year')['population'].sum().reset_index()\n",
     "print(totl_pop_by_year.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "044b1f10",
+   "metadata": {},
+   "source": [
+    "##### Fetch Birthrate data"
    ]
   },
   {
@@ -175,6 +193,7 @@
    "id": "ddded163",
    "metadata": {},
    "source": [
+    "##### Condition Birthrate data\n",
     "There is a data of INX having NaN for birthrate, same is replaced with mean() of the entire column in order to keep the birthrate newtral."
    ]
   },
@@ -240,12 +259,12 @@
    "id": "32128798",
    "metadata": {},
    "source": [
-    "Store data in sqlite database for futher calculations"
+    "#### Store data in sqlite database for futher calculations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "f14f55fb",
    "metadata": {},
    "outputs": [
@@ -264,18 +283,29 @@
     "import sqlite3\n",
     "\n",
     "conn = sqlite3.connect('mapleroot.db',isolation_level=None)\n",
+    "\n",
     "totl_pop_country_wise.to_sql('tbl_totl_county_pop',conn,if_exists='replace',index='False')\n",
     "totl_pop_by_year.to_sql('tbl_totl_pop',conn,if_exists='replace',index=False)\n",
     "birth_rate_country_wise.to_sql('tbl_br_cnt',conn,if_exists='replace',index=False)\n",
+    "\n",
     "print(conn.execute('SELECT name FROM sqlite_schema WHERE type=\"table\"').fetchall())\n",
     "print(conn.execute('PRAGMA TABLE_INFO(\"tbl_totl_pop\")').fetchall())\n",
     "print(conn.execute('PRAGMA TABLE_INFO(\"tbl_br_cnt\")').fetchall())\n",
+    "\n",
     "conn.close()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20edcfa0",
+   "metadata": {},
+   "source": [
+    "#### Data modeling and feature engineering"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "deb30093",
    "metadata": {},
    "outputs": [
@@ -303,6 +333,7 @@
     "df_ttl_pop_sql = pd.read_sql(quary,conn)\n",
     "# print(df_ttl_pop_sql)\n",
     "\n",
+    "# *** Final table to be used fall the visuals ***\n",
     "df_maple_roots = df_br_sql[df_br_sql['code']=='CAN'].reset_index()\n",
     "# print(len(df_maple_roots))\n",
     "# print(df_maple_roots.columns)\n",
@@ -322,6 +353,15 @@
     "print(df_maple_roots.head())\n",
     "conn.close()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "763e822e",
+   "metadata": {},
+   "source": [
+    "##### Merging data from different tables to create visual insights\n",
+    "###### World Birthrate and population to be added\n"
    ]
   },
   {
@@ -412,6 +452,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "93e4c9b8",
+   "metadata": {},
+   "source": [
+    "##### Some column rename due to typo error"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 93,
    "id": "f1ed1e5a",
@@ -448,7 +496,7 @@
    "id": "f72fd289",
    "metadata": {},
    "source": [
-    "### calculation\n",
+    "### Calculation\n",
     "total Canada birth, total world birth, then calculate probability of birth in Canada compared to world"
    ]
   },
@@ -484,6 +532,15 @@
     "df_maple_roots['w_birth'] = (df_maple_roots['w_birthrate'] * df_maple_roots['w_population'])/1000\n",
     "df_maple_roots['c_probability'] = (df_maple_roots['c_birth'] / df_maple_roots['w_birth'])\n",
     "print(df_maple_roots.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d02880fe",
+   "metadata": {},
+   "source": [
+    "### Visualization\n",
+    "#### Probability year on year"
    ]
   },
   {
@@ -527,6 +584,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c941d598",
+   "metadata": {},
+   "source": [
+    "##### Birthrate trend Canada vs World"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 96,
    "id": "bc38a917",
@@ -555,6 +620,14 @@
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "808396f7",
+   "metadata": {},
+   "source": [
+    "#### Time series percentage groath over time"
    ]
   },
   {
@@ -621,6 +694,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d80ffe1f",
+   "metadata": {},
+   "source": [
+    "### Resolve problem statement\n",
+    "\n",
+    "#### df_maple_roots and tbl_maple_roots is a key dataset to answer the problem statment in hand.\n",
+    "\n",
+    "##### store it to sqlite db for future calculations and quary"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 99,
    "id": "3d05469b",
@@ -634,6 +719,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3509d52b",
+   "metadata": {},
+   "source": [
+    "##### Create csv files for streamlit report publishing platform"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 83,
    "id": "b3f44205",
@@ -644,6 +737,14 @@
     "totl_pop_country_wise.to_csv('total_population_country_wise.csv')\n",
     "totl_pop_by_year.to_csv('total_population_by_year.csv')\n",
     "birth_rate_country_wise.to_csv('birth_rate_country_wise.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee8c7ea4",
+   "metadata": {},
+   "source": [
+    "##### Take user input for year, show and draft insights based on user year selection."
    ]
   },
   {
